force-app/main/default/staticresources/python/Disappear/src/objects/PubType__c.object
<CustomObject>
    <fields>
        <fullName>DefaultTargetType__c</fullName>
        <label>DefaultTargetType</label>
        <picklist>
            <picklistValues>
                <fullName>Meeting</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ME_plus__c</fullName>
        <label>ME +</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MePoint__c</fullName>
        <description>Manuscript Point awarded to Writing Coordinator for this type of publication.</description>
        <label>ME</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>displayOrder__c</fullName>
        <description>Order to sort the Publication Type in</description>
        <label>displayOrder</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isInitalStatusSuggested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InitalStatus = Suggested</label>
        <type>Checkbox</type>
    </fields>
    <label>Publication Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>displayOrder__c</columns>
        <columns>DefaultTargetType__c</columns>
        <columns>isInitalStatusSuggested__c</columns>
        <columns>MePoint__c</columns>
        <columns>ME_plus__c</columns>
        <columns>IsLogicallyDeleted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PubType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publication Types</pluralLabel>
    <recordTypes>
        <fullName>APPEARPubTypeRecord</fullName>
        <active>true</active>
        <label>APPEARPubTypeRecord</label>
    </recordTypes>
    <recordTypes>
        <fullName>LegacyPubTypeRecord</fullName>
        <active>true</active>
        <description>Legacy record type for data migration</description>
        <label>LegacyPubTypeRecord</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>